import 'app_localizations.dart';

class AppLocalizationsAr extends AppLocalizations {
  @override
  String get appName => 'تمرة';

  @override
  String get newAddress => 'عنوان جديد';

  @override
  String get addressName => 'اسم العنوان';

  @override
  String get addressDescription => 'وصف العنوان';

  @override
  String get addressOnMap => 'العنوان على الخريطة';

  @override
  String get save => 'حفظ';

  @override
  String get home => 'الرئيسية';

  @override
  String get basket => 'السلة';

  @override
  String get providers => 'الموردين';

  @override
  String get myAccount => 'حسابي';

  @override
  String get deliveryTo => 'التوصيل الى';

  @override
  String get searchProduct => 'البحث عن منتج';

  @override
  String get fruits => 'فواكه';

  @override
  String get vegetables => 'خضار';

  @override
  String get papers => 'ورقيات';

  @override
  String get citrus => 'حمضيات';

  @override
  String get tropical => 'استوائة';

  @override
  String get local => 'محليه';

  @override
  String get selectLanguage => 'اختر اللغة';

  @override
  String get arabic => 'العربية';

  @override
  String get english => 'English';
}












