...
                  SizedBox(
                    height: 100,
                  ),
                  Row(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      Text('ادخل كود التفعيل',
                          style: TextStyle(
                              color: Color(0XFF6A6A6A),
                              fontSize: 20,
                              fontFamily: 'IBMPlex'))
                    ],
                  ),
...
                          child: InkWell(
                            onTap: _handleVerifyTap,
                            borderRadius: BorderRadius.circular(8),
                            child: Padding(
                              padding: EdgeInsets.symmetric(horizontal: 2, vertical: 4),
                              child: Text(
                                'التالي',
                                style: TextStyle(
                                  color: Color(0XFF6A6A6A),
                                  fontSize: 18,
                                  fontFamily: 'IBMPlex',
                                  fontWeight: FontWeight.w500,
                                ),
...
